# raw-to-csv

./: .gitignore  pyproject.toml
data/: .gitignore
src/: __main__.py  to_csv.py
