[tool.poetry]
name = "raw-to-csv"
version = "0.1.0"
description = ""
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aeromet-py = "^0.1.2"
rich = "^13.9.4"
pydantic = "^2.10.4"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
